--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EAU2
 excludes=
+file.reference.itextpdf-5.5.9.jar=..\\..\\..\\Dropbox\\itextpdf-5.5.9.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.itextpdf-5.5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
